добавит блок Платные Услуги. WIP: доллар и плюс в кружочке + ПП

--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -102,6 +102,106 @@
     </div>
   </section>
 
+  <section class="paid-services">
+    <div class="section-xxl">
+      <div class="paid-services__wrapper">
+        <div class="container">
+          <h2 class="paid-services__heading heading-primary">Платные услуги склада</h2>
+          <ul class="paid-services__list">
+            <li class="paid-services__item">
+                <p class="paid-services__desc">Хранение входящих посылок свыше 45 дней</p>
+                <p class="paid-services__cost">$1 в день</p>
+            </li>
+            <li class="paid-services__item">
+                <p class="paid-services__desc">Хранение входящих посылок свыше 7 дней</p>
+                <p class="paid-services__cost">$1 в день</p>
+            </li>
+            <li class="paid-services__item">
+                <p class="paid-services__desc">Экспресс-сборка исходящей посылки</p>
+                <p class="paid-services__cost">$5</p>
+            </li>
+            <li class="paid-services__item">
+                <p class="paid-services__desc">Экспресс-обращение в поддержку</p>
+                <p class="paid-services__cost">$3.99</p>
+            </li>
+            <li class="paid-services__item">
+                <p class="paid-services__desc">Сделать фотографию этикетки с адресом</p>
+                <p class="paid-services__cost">$1</p>
+            </li>
+            <li class="paid-services__item">
+                <p class="paid-services__desc">Сделать фотографию промокода</p>
+                <p class="paid-services__cost">$2</p>
+            </li>
+            <li class="paid-services__item">
+                <p class="paid-services__desc">Сделать фотографию посылки на весах</p>
+                <p class="paid-services__cost">$2</p>
+            </li>
+            <li class="paid-services__item">
+                <p class="paid-services__desc">3 фото содержимого посылки</p>
+                <p class="paid-services__cost">$5</p>
+            </li>
+            <li class="paid-services__item">
+                <p class="paid-services__desc">Сделать 10 фотографий содержимого</p>
+                <p class="paid-services__cost">$10</p>
+            </li>
+            <li class="paid-services__item">
+                <p class="paid-services__desc">HD видео (1 минута)</p>
+                <p class="paid-services__cost">$7</p>
+            </li>
+            <li class="paid-services__item">
+                <p class="paid-services__desc">Проверка техники на работоспособность</p>
+                <p class="paid-services__cost">$10</p>
+            </li>
+            <li class="paid-services__item">
+                <p class="paid-services__desc">Дополнительное пожелание сборщикам на складе</p>
+                <p class="paid-services__cost">$1 в день</p>
+            </li>
+            <li class="paid-services__item">
+                <p class="paid-services__desc">Деление входящей посылки на несколько</p>
+                <p class="paid-services__cost">от $5</p>
+            </li>
+            <li class="paid-services__item">
+                <p class="paid-services__desc">Перенос входящей посылки между аккаунтами клиентов</p>
+                <p class="paid-services__cost">$1</p>
+            </li>
+            <li class="paid-services__item">
+                <p class="paid-services__desc">Возврат товара в магазин</p>
+                <p class="paid-services__cost">$10</p>
+                <p class="paid-services__cost-note">+ стоимость <br> пересылки</p>
+            </li>
+          </ul>
+          <h3 class="packaging__heading heading-primary">Дополнительная упаковка</h3>
+          <ul class="packaging__list">
+            <li class="packaging__item">
+              <div class="packaging__item-wrapper">
+                <p class="packaging__desc">Многослойная защитная плёнка</p>
+                <p class="packaging__cost">$4</p>
+              </div>
+            </li>
+            <li class="packaging__item">
+              <div class="packaging__item-wrapper">
+                <p class="packaging__desc">Упаковка в пакет</p>
+                <p class="packaging__cost">$3</p>
+              </div>
+            </li>
+            <li class="packaging__item">
+              <div class="packaging__item-wrapper">
+                <p class="packaging__desc">Упаковка в коробку с двойными стенками</p>
+                <p class="packaging__cost">$5</p>
+              </div>
+            </li>
+            <li class="packaging__item">
+              <div class="packaging__item-wrapper">
+                <p class="packaging__desc">Наклейки “Обращаться осторожно” и “Хрупкий груз”</p>
+                <p class="packaging__cost">$0.35</p>
+                <p class="packaging__cost-note">за одну наклейку</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
 
 </main>
 
