Исправляет сборку и шаблоны

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -2,6 +2,7 @@
 
 {% set siteName = "Prostobox.com" %}
 {% set isAuthenticated = false %}
+{% set isIndex = true %}
 
 {% block main %}
 
@@ -206,7 +207,7 @@
                       <div class="rating-stars rating-stars--5" aria-label="рейтинг: 5"></div>
                     </div>
                     <span class="review__label review__city">Москва</span>
-                    <span class="review__label review__order">PCT000000443175</span>
+                    <span class="review__label review__order"><a href="#">PCT000000443175</a></span>
                   </div>
                   <div class="review__gallery">
                     <div class="review__gallery-wrapper">
@@ -245,7 +246,7 @@
                       <div class="rating-stars rating-stars--5" aria-label="рейтинг: 5"></div>
                     </div>
                     <span class="review__label review__city">Владивосток</span>
-                    <span class="review__label review__order">PCT000000443175</span>
+                    <span class="review__label review__order"><a href="#">PCT000000443175</a></span>
                   </div>
                   <!-- <div class="review__gallery">
                   </div> -->
@@ -267,7 +268,7 @@
                       <div class="rating-stars rating-stars--5" aria-label="рейтинг: 5"></div>
                     </div>
                     <span class="review__label review__city">Москва</span>
-                    <span class="review__label review__order">PCT000000443175</span>
+                    <span class="review__label review__order"><a href="#">PCT000000443175</a></span>
                   </div>
                   <div class="review__gallery">
                     <div class="review__gallery-wrapper">
