правки блока paid-services

--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -150,11 +150,11 @@
             </li>
             <li class="paid-services__item">
                 <p class="paid-services__desc">Проверка техники на работоспособность</p>
-                <p class="paid-services__cost">$10</p>
+                <p class="paid-services__cost">$10/шт.</p>
             </li>
             <li class="paid-services__item">
                 <p class="paid-services__desc">Дополнительное пожелание сборщикам на складе</p>
-                <p class="paid-services__cost">$1 в день</p>
+                <p class="paid-services__cost">$2</p>
             </li>
             <li class="paid-services__item">
                 <p class="paid-services__desc">Деление входящей посылки на несколько</p>
@@ -174,7 +174,7 @@
           <ul class="packaging__list">
             <li class="packaging__item">
               <div class="packaging__item-wrapper">
-                <p class="packaging__desc">Многослойная защитная плёнка</p>
+                <p class="packaging__desc">Многослойная <br> защитная плёнка</p>
                 <p class="packaging__cost">$4</p>
               </div>
             </li>
@@ -186,7 +186,7 @@
             </li>
             <li class="packaging__item">
               <div class="packaging__item-wrapper">
-                <p class="packaging__desc">Упаковка в коробку с двойными стенками</p>
+                <p class="packaging__desc">Упаковка в коробку с&nbsp;двойными стенками</p>
                 <p class="packaging__cost">$5</p>
               </div>
             </li>
