Обновляет форматирование текста

--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -121,7 +121,7 @@
                 <p class="paid-services__cost">$5</p>
             </li>
             <li class="paid-services__item">
-                <p class="paid-services__desc">Экспресс-обращение в поддержку</p>
+                <p class="paid-services__desc">Экспресс-обращение в&nbsp;поддержку</p>
                 <p class="paid-services__cost">$3.99</p>
             </li>
             <li class="paid-services__item">
@@ -142,14 +142,14 @@
             </li>
             <li class="paid-services__item">
                 <p class="paid-services__desc">Сделать 10 фотографий содержимого</p>
-                <p class="paid-services__cost">$10</p>
+                <p class="paid-services__cost">$6</p>
             </li>
             <li class="paid-services__item">
                 <p class="paid-services__desc">HD видео (1 минута)</p>
                 <p class="paid-services__cost">$7</p>
             </li>
             <li class="paid-services__item">
-                <p class="paid-services__desc">Проверка техники на работоспособность</p>
+                <p class="paid-services__desc">Проверка техники на&nbsp;работоспособность</p>
                 <p class="paid-services__cost">$10/шт.</p>
             </li>
             <li class="paid-services__item">
@@ -165,7 +165,7 @@
                 <p class="paid-services__cost">$1</p>
             </li>
             <li class="paid-services__item">
-                <p class="paid-services__desc">Возврат товара в магазин</p>
+                <p class="paid-services__desc">Возврат товара в&nbsp;магазин</p>
                 <p class="paid-services__cost">$10</p>
                 <p class="paid-services__cost-note">+ стоимость <br> пересылки</p>
             </li>
