добавит блок customs

--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -109,65 +109,65 @@
           <h2 class="paid-services__heading heading-primary">Платные услуги склада</h2>
           <ul class="paid-services__list">
             <li class="paid-services__item">
-                <p class="paid-services__desc">Хранение входящих посылок свыше 45 дней</p>
-                <p class="paid-services__cost">$1 в день</p>
+              <p class="paid-services__desc">Хранение входящих посылок свыше 45 дней</p>
+              <p class="paid-services__cost">$1 в день</p>
             </li>
             <li class="paid-services__item">
-                <p class="paid-services__desc">Хранение входящих посылок свыше 7 дней</p>
-                <p class="paid-services__cost">$1 в день</p>
+              <p class="paid-services__desc">Хранение входящих посылок свыше 7 дней</p>
+              <p class="paid-services__cost">$1 в день</p>
             </li>
             <li class="paid-services__item">
-                <p class="paid-services__desc">Экспресс-сборка исходящей посылки</p>
-                <p class="paid-services__cost">$5</p>
+              <p class="paid-services__desc">Экспресс-сборка исходящей посылки</p>
+              <p class="paid-services__cost">$5</p>
             </li>
             <li class="paid-services__item">
-                <p class="paid-services__desc">Экспресс-обращение в&nbsp;поддержку</p>
-                <p class="paid-services__cost">$3.99</p>
+              <p class="paid-services__desc">Экспресс-обращение в&nbsp;поддержку</p>
+              <p class="paid-services__cost">$3.99</p>
             </li>
             <li class="paid-services__item">
-                <p class="paid-services__desc">Сделать фотографию этикетки с адресом</p>
-                <p class="paid-services__cost">$1</p>
+              <p class="paid-services__desc">Сделать фотографию этикетки с адресом</p>
+              <p class="paid-services__cost">$1</p>
             </li>
             <li class="paid-services__item">
-                <p class="paid-services__desc">Сделать фотографию промокода</p>
-                <p class="paid-services__cost">$2</p>
+              <p class="paid-services__desc">Сделать фотографию промокода</p>
+              <p class="paid-services__cost">$2</p>
             </li>
             <li class="paid-services__item">
-                <p class="paid-services__desc">Сделать фотографию посылки на весах</p>
-                <p class="paid-services__cost">$2</p>
+              <p class="paid-services__desc">Сделать фотографию посылки на весах</p>
+              <p class="paid-services__cost">$2</p>
             </li>
             <li class="paid-services__item">
-                <p class="paid-services__desc">3 фото содержимого посылки</p>
-                <p class="paid-services__cost">$5</p>
+              <p class="paid-services__desc">3 фото содержимого посылки</p>
+              <p class="paid-services__cost">$5</p>
             </li>
             <li class="paid-services__item">
-                <p class="paid-services__desc">Сделать 10 фотографий содержимого</p>
-                <p class="paid-services__cost">$6</p>
+              <p class="paid-services__desc">Сделать 10 фотографий содержимого</p>
+              <p class="paid-services__cost">$6</p>
             </li>
             <li class="paid-services__item">
-                <p class="paid-services__desc">HD видео (1 минута)</p>
-                <p class="paid-services__cost">$7</p>
+              <p class="paid-services__desc">HD видео (1 минута)</p>
+              <p class="paid-services__cost">$7</p>
             </li>
             <li class="paid-services__item">
-                <p class="paid-services__desc">Проверка техники на&nbsp;работоспособность</p>
-                <p class="paid-services__cost">$10/шт.</p>
+              <p class="paid-services__desc">Проверка техники на&nbsp;работоспособность</p>
+              <p class="paid-services__cost">$10/шт.</p>
             </li>
             <li class="paid-services__item">
-                <p class="paid-services__desc">Дополнительное пожелание сборщикам на складе</p>
-                <p class="paid-services__cost">$2</p>
+              <p class="paid-services__desc">Дополнительное пожелание сборщикам на складе</p>
+              <p class="paid-services__cost">$2</p>
             </li>
             <li class="paid-services__item">
-                <p class="paid-services__desc">Деление входящей посылки на несколько</p>
-                <p class="paid-services__cost">от $5</p>
+              <p class="paid-services__desc">Деление входящей посылки на несколько</p>
+              <p class="paid-services__cost">от $5</p>
             </li>
             <li class="paid-services__item">
-                <p class="paid-services__desc">Перенос входящей посылки между аккаунтами клиентов</p>
-                <p class="paid-services__cost">$1</p>
+              <p class="paid-services__desc">Перенос входящей посылки между аккаунтами клиентов</p>
+              <p class="paid-services__cost">$1</p>
             </li>
             <li class="paid-services__item">
-                <p class="paid-services__desc">Возврат товара в&nbsp;магазин</p>
-                <p class="paid-services__cost">$10</p>
-                <p class="paid-services__cost-note">+ стоимость <br> пересылки</p>
+              <p class="paid-services__desc">Возврат товара в&nbsp;магазин</p>
+              <p class="paid-services__cost">$10</p>
+              <p class="paid-services__cost-note">+ стоимость <br> пересылки</p>
             </li>
           </ul>
           <h3 class="packaging__heading heading-primary">Дополнительная упаковка</h3>
@@ -203,6 +203,23 @@
     </div>
   </section>
 
+  <section class="customs">
+    <div class="container">
+      <div class="customs__wrapper row">
+        <h2 class="customs__title heading-primary col-lg-6">Прием оплаты таможенного сбора</h2>
+        <div class="customs__desc-wrapper col-lg-6">
+          <p class="customs__desc">
+            Чтобы избежать общения с брокером и оплаты пошлины через интернет, когда посылка уже стоит на таможне – мы
+            предлагаем вам оплатить таможенный сбор прямо во время оплаты доставки. Это упростит вам жизнь и максимально
+            ускорит прохождение посылкой таможни.
+          </p>
+          <p class="customs__cost">
+            Стоимость услуги – <span class="blue">4% от&nbsp;суммы таможенного сбора.</span>
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
 
 {% endblock %}
