добавит кнопку и всплывающую подсказку в блок customs

--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -215,7 +215,13 @@
           </p>
           <p class="customs__cost">
             Стоимость услуги – <span class="blue">4% от&nbsp;суммы таможенного сбора.</span>
+            <button class="question-mark" data-tippy-content="Например, если ваш товар стоит 300 долларов, пошлина будет составлять примерно $8.33 + фиксированный сбор таможни $6.80, то наша комиссия будет составлять примерно $0,6">
+              <svg width="20" height="20" viewBox="0 0 20 20">
+                <use xlink:href="img/sprite.svg#question-mark"></use>
+              </svg>
+            </button>
           </p>
+
         </div>
       </div>
     </div>
