поправит: 1) ошибки в services.html 2) разметку блока customs 3) отступы между секциями для insurance & paid-services

--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -102,7 +102,7 @@
     </div>
   </section>
 
-  <section class="paid-services">
+  <section class="paid-services section section--pb">
     <div class="section-xxl">
       <div class="paid-services__wrapper">
         <div class="container">
@@ -162,7 +162,7 @@
             </li>
             <li class="paid-services__item">
               <p class="paid-services__desc">Перенос входящей посылки между аккаунтами клиентов</p>
-              <p class="paid-services__cost">$1</p>
+              <p class="paid-services__cost">$3</p>
             </li>
             <li class="paid-services__item">
               <p class="paid-services__desc">Возврат товара в&nbsp;магазин</p>
@@ -203,22 +203,18 @@
     </div>
   </section>
 
-  <section class="insurance section">
+  <section class="insurance section section--pb">
     <div class="container">
-      <div class="insurance__wrapper row">
+      <div class="row">
         <div class="insurace__text-wrapper col-lg-6">
           <h2 class="insurance__heading heading-primary">Страховка</h2>
           <p class="insurance__text heading-secondary"><b class="blue">Страховка от утери обязательна</b> для всех
             тарифов.</p>
           <ul class="insurance__list list">
-            <div class="insurance__list-item">
-              <li>Для товаров с eBay страховка сработает только если товар будет <b class="blue">утерян.</b>
-              </li>
-            </div>
-            <div class="insurance__list-item">
-              <li>Страховка стоимости доставки – <b class="blue">$3 за&nbsp;каждые $100.</b>
-              </li>
-            </div>
+            <li>Для товаров с eBay страховка сработает только если товар будет <b class="blue">утерян.</b>
+            </li>
+            <li>Страховка стоимости доставки – <b class="blue">$3 за&nbsp;каждые $100.</b>
+            </li>
           </ul>
         </div>
         <div class="col-lg-6">
@@ -249,10 +245,10 @@
     </div>
   </section>
 
-    <section class="customs">
+  <section class="customs section section--pb">
     <div class="container">
-      <div class="customs__wrapper row">
-        <h2 class="customs__title heading-primary col-lg-6">Прием оплаты таможенного сбора</h2>
+      <h2 class="customs__title heading-primary">Прием оплаты таможенного сбора</h2>
+      <div class="customs__wrapper row justify-content-end">
         <div class="customs__desc-wrapper col-lg-6">
           <p class="customs__desc">
             Чтобы избежать общения с брокером и оплаты пошлины через интернет, когда посылка уже стоит на таможне – мы
@@ -261,7 +257,8 @@
           </p>
           <p class="customs__cost">
             Стоимость услуги – <span class="blue">4% от&nbsp;суммы таможенного сбора.</span>
-            <button class="question-mark" data-tippy-content="Например, если ваш товар стоит 300 долларов, пошлина будет составлять примерно $8.33 + фиксированный сбор таможни $6.80, то наша комиссия будет составлять примерно $0,6">
+            <button class="question-mark"
+              data-tippy-content="Например, если ваш товар стоит 300 долларов, пошлина будет составлять примерно $8.33 + фиксированный сбор таможни $6.80, то наша комиссия будет составлять примерно $0,6">
               <svg width="20" height="20" viewBox="0 0 20 20">
                 <use xlink:href="img/sprite.svg#question-mark"></use>
               </svg>
