--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -102,7 +102,7 @@
     </div>
   </section>
 
-  <section class="paid-services section section--pb">
+  <section class="paid-services">
     <div class="section-xxl">
       <div class="paid-services__wrapper">
         <div class="container">
@@ -255,15 +255,15 @@
             предлагаем вам оплатить таможенный сбор прямо во время оплаты доставки. Это упростит вам жизнь и максимально
             ускорит прохождение посылкой таможни.
           </p>
-          <p class="customs__cost">
-            Стоимость услуги – <span class="blue">4% от&nbsp;суммы таможенного сбора.</span>
-            <button class="question-mark"
-              data-tippy-content="Например, если ваш товар стоит 300 долларов, пошлина будет составлять примерно $8.33 + фиксированный сбор таможни $6.80, то наша комиссия будет составлять примерно $0,6">
-              <svg width="20" height="20" viewBox="0 0 20 20">
-                <use xlink:href="img/sprite.svg#question-mark"></use>
-              </svg>
-            </button>
-          </p>
+            <p class="customs__cost">
+              Стоимость услуги – <span class="blue">4% от&nbsp;суммы таможенного сбора.</span>
+              <button class="question-mark"
+                data-tippy-content="Например, если ваш товар стоит 300 долларов, пошлина будет составлять примерно $8.33 + фиксированный сбор таможни $6.80, то наша комиссия будет составлять примерно $0,6">
+                <svg width="20" height="20" viewBox="0 0 20 20">
+                  <use xlink:href="img/sprite.svg#question-mark"></use>
+                </svg>
+              </button>
+            </p>
         </div>
       </div>
     </div>
