Добавляет описание калькулятора

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -82,7 +82,7 @@
 
     </section>
 
-    <section class="section section--pb-m section--pb">
+    <section class="section section--pb-m section--pb mb-lg-5">
       {% include "../templates/components/calculator.html" %}
     </section>
 
@@ -427,7 +427,7 @@
       </div>
     </section>
 
-    <section class="subscribe section section--pb-m section--p mb-lg-5">
+    <section class="subscribe section section--pb-m section--pb mb-lg-5">
       <div class="container">
         <div class="subscribe__wrapper row">
           <div class="col-lg-6 ms-lg-auto">
