правки how-to-buy: 1) фоновая картинка через псевдо: - подрежит картинки, чтобы убрать лишние пикесели для моб и десктопа - сделает позиционирование от wrapper-а блока - уберет оферлоу hidden и добавит всем элементам блока position relative, чтобы фоновая картинка легла под текст 2) Параграф - поправит padding - установит ширину в % чтобы текст динамически менялся при изменении ширины экрана

--- a/src/pages/how-to-buy.html
+++ b/src/pages/how-to-buy.html
@@ -5,17 +5,18 @@
 
 {% block main %}
 
-<style>
-  {# html {
+<!-- <style>
+  html {
     background-image: url("img/how-to-s.png");
     background-position: center top 0;
     background-repeat: no-repeat;
   }
+
   body {
     opacity: 0.5;
-  } #}
+  }
 
-</style>
+</style> -->
 
 <main>
   <section class="section how-to-buy">
@@ -29,7 +30,7 @@
           <h1 class="how-to-buy__heading heading-primary">Как покупать в&nbsp;США?</h1>
           <p class="how-to-buy__desc">
             Магазины США часто не&nbsp;доставляют товары в&nbsp;Россию, но это не проблема.
-            Мы поможем покупать по лучшим ценам и&nbsp;экономить на доставке.
+            Мы&nbsp;поможем покупать по лучшим ценам и&nbsp;экономить на доставке.
             Наш новый современный склад в&nbsp;Делавере подойдет для&nbsp;покупок
             в&nbsp;магазинах Америки. Мы получим ваши посылки и отправим их
             к&nbsp;вам домой. Быстро и дёшево.
