WIP: добавит драфт следующего блока

--- a/src/pages/how-to-buy.html
+++ b/src/pages/how-to-buy.html
@@ -19,7 +19,7 @@
 </style> -->
 
 <main>
-  <section class="section how-to-buy">
+  <section class="how-to-buy section section--pb-m">
     <div class="section-xxl">
       <div class="how-to-buy__wrapper">
         <div class=" container">
@@ -37,6 +37,48 @@
           </p>
         </div>
       </div>
+    </div>
+  </section>
+  <section class="section free-address">
+    <div class="container">
+      <div class="free-address__wrapper">
+        <h2 class="visually-hidden">Бесплатный адрес</h2>
+        <p class="free-address__brief">
+          Получаете <span class="blue">бесплатный адрес</span> в Америке, чтобы магазины приняли вас
+          за Американца.
+        </p>
+        <p class="free-address__desc">
+          После регистрации на нашем сайте у вас будет виртуальный адрес в США,
+          который вы сможете указывать при оформлении заказов
+          в Американских интернет-магазинах.
+        </p>
+        <a class="button" href="#">Зарегистрироваться</a>
+      </div>
+      <!-- </div> -->
+      <!-- </section> -->
+
+      <!-- <sectio class="what-to-buy"> -->
+      <!-- <div class="container"> -->
+      <div class="what-to-buy__wrapper">
+        <h2 class="visually-hidden">Что можно покупать?</h2>
+        <p class="what-to-buy__brief">
+          <span class="blue">Покупаете</span> в Американском магазине
+          <span class="blue">по ценам для Американцев</span>
+        </p>
+        <p class="what-to-buy__desc">
+          Выбираете нужные товары в магазинах Америки. Расплачиваетесь
+          своей картой и в, качестве адреса доставки указываете адрес
+          и телефон нашего склада.
+        </p>
+        <a class="button" href="#">Что можно покупать?</a>
+      </div>
+
+      <div>
+        <p>Хотите получить самую <span class="blue">выгодную цену</span> на доставку?</p>
+        <a href="#">Да</a>
+        <a href="#">Нет</a>
+      </div>
+
     </div>
   </section>
 
