--- a/src/pages/how-to-buy.html
+++ b/src/pages/how-to-buy.html
@@ -39,46 +39,47 @@
       </div>
     </div>
   </section>
-  <section class="section free-address">
+  <section class="section how-details">
     <div class="container">
-      <div class="free-address__wrapper">
-        <h2 class="visually-hidden">Бесплатный адрес</h2>
-        <p class="free-address__brief">
+      <div class="how-details__wrapper">
+        <p class="how-details__brief">
           Получаете <span class="blue">бесплатный адрес</span> в Америке, чтобы магазины приняли вас
           за Американца.
         </p>
-        <p class="free-address__desc">
+        <p class="how-details__desc">
           После регистрации на нашем сайте у вас будет виртуальный адрес в США,
           который вы сможете указывать при оформлении заказов
-          в Американских интернет-магазинах.
+          в&nbsp;Американских интернет&#8209;магазинах.
         </p>
-        <a class="button" href="#">Зарегистрироваться</a>
-      </div>
-      <!-- </div> -->
-      <!-- </section> -->
 
-      <!-- <sectio class="what-to-buy"> -->
-      <!-- <div class="container"> -->
-      <div class="what-to-buy__wrapper">
-        <h2 class="visually-hidden">Что можно покупать?</h2>
-        <p class="what-to-buy__brief">
-          <span class="blue">Покупаете</span> в Американском магазине
-          <span class="blue">по ценам для Американцев</span>
-        </p>
-        <p class="what-to-buy__desc">
-          Выбираете нужные товары в магазинах Америки. Расплачиваетесь
-          своей картой и в, качестве адреса доставки указываете адрес
-          и телефон нашего склада.
-        </p>
-        <a class="button" href="#">Что можно покупать?</a>
       </div>
-
-      <div>
-        <p>Хотите получить самую <span class="blue">выгодную цену</span> на доставку?</p>
-        <a href="#">Да</a>
-        <a href="#">Нет</a>
+      <div class="how-details__button-wrapper">
+        <a class="button button--medium" href="#">Зарегистрироваться</a>
       </div>
+      <div class="how-details__wrapper">
+        <div class="how-details__container">
+          <p class="how-details__brief">
+            <span class="blue">Покупаете</span> в&nbsp;Американском магазине
+            <span class="blue">по ценам для Американцев</span>
+          </p>
+          <p class="how-details__desc">
+            Выбираете нужные товары в&nbsp;магазинах Америки. Расплачиваетесь
+            своей картой и в качестве адреса доставки указываете адрес
+            и телефон нашего склада.
+          </p>
+        </div>
 
+      </div>
+      <div class="how-details__button-wrapper">
+        <a class="button button--medium" href="#">Что можно покупать?</a>
+      </div>
+      <div class="how-details__wrapper how-details__wrapper--shipment">
+        <p class="how-details__brief">Хотите получить самую <span class="blue">выгодную цену</span> на доставку?</p>
+      </div>
+      <div class="how-details__buttons-wrapper pricing-options">
+        <a class="button button--small pricing-options__item" href="#">Да</a>
+        <a class="button button--small button--white pricing-options__item" href="#">Нет</a>
+      </div>
     </div>
   </section>
 
