how-to-buy - html добавит классы для стилизации десктопа - css добавит стилизацию для декстопа

--- a/src/pages/how-to-buy.html
+++ b/src/pages/how-to-buy.html
@@ -41,44 +41,57 @@
   </section>
   <section class="section how-details">
     <div class="container">
-      <div class="how-details__wrapper">
-        <p class="how-details__brief">
-          Получаете <span class="blue">бесплатный адрес</span> в Америке, чтобы магазины приняли вас
-          за Американца.
-        </p>
-        <p class="how-details__desc">
-          После регистрации на нашем сайте у вас будет виртуальный адрес в США,
-          который вы сможете указывать при оформлении заказов
-          в&nbsp;Американских интернет&#8209;магазинах.
-        </p>
+      <div class="row justify-content-end how-details__block-wrapper how-details__block-wrapper--free-address">
+        <div class="col-lg-6 how-details__block-container">
+          <div class="how-details__wrapper">
+            <p class="how-details__brief">
+              Получаете <span class="blue">бесплатный адрес</span> в Америке, чтобы магазины приняли вас
+              за Американца.
+            </p>
+            <p class="how-details__desc">
+              После регистрации на нашем сайте у вас будет виртуальный адрес в США,
+              который вы сможете указывать при оформлении заказов
+              в&nbsp;Американских интернет&#8209;магазинах.
+            </p>
 
-      </div>
-      <div class="how-details__button-wrapper">
-        <a class="button button--medium" href="#">Зарегистрироваться</a>
-      </div>
-      <div class="how-details__wrapper">
-        <div class="how-details__container">
-          <p class="how-details__brief">
-            <span class="blue">Покупаете</span> в&nbsp;Американском магазине
-            <span class="blue">по ценам для Американцев</span>
-          </p>
-          <p class="how-details__desc">
-            Выбираете нужные товары в&nbsp;магазинах Америки. Расплачиваетесь
-            своей картой и в качестве адреса доставки указываете адрес
-            и телефон нашего склада.
-          </p>
+          </div>
+          <div class="how-details__button-wrapper">
+            <a class="button button--medium" href="#">Зарегистрироваться</a>
+          </div>
         </div>
-
       </div>
-      <div class="how-details__button-wrapper">
-        <a class="button button--medium" href="#">Что можно покупать?</a>
+      <div class="row justify-content-start how-details__block-wrapper how-details__block-wrapper--us-prices">
+        <div class="col-lg-6 how-details__block-container">
+          <div class="how-details__wrapper">
+            <div class="how-details__container how-details__container--us-prices">
+              <p class="how-details__brief">
+                <span class="blue">Покупаете</span> в&nbsp;Американском магазине
+                <span class="blue">по ценам для Американцев</span>
+              </p>
+              <p class="how-details__desc">
+                Выбираете нужные товары в&nbsp;магазинах Америки. Расплачиваетесь
+                своей картой и в качестве адреса доставки указываете адрес
+                и телефон нашего склада.
+              </p>
+            </div>
+          </div>
+          <div class="how-details__container">
+            <div class="how-details__button-wrapper">
+              <a class="button button--medium" href="#">Что можно покупать?</a>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="how-details__wrapper how-details__wrapper--shipment">
-        <p class="how-details__brief">Хотите получить самую <span class="blue">выгодную цену</span> на доставку?</p>
-      </div>
-      <div class="how-details__buttons-wrapper pricing-options">
-        <a class="button button--small pricing-options__item" href="#">Да</a>
-        <a class="button button--small button--white pricing-options__item" href="#">Нет</a>
+      <div class="row justify-content-end">
+        <div class="col-lg-6 how-details__block-container">
+          <div class="how-details__wrapper how-details__wrapper--shipment">
+            <p class="how-details__brief">Хотите получить самую <span class="blue">выгодную цену</span> на доставку?</p>
+          </div>
+          <div class="how-details__buttons-wrapper pricing-options">
+            <a class="button button--small pricing-options__item" href="#">Да</a>
+            <a class="button button--small button--white pricing-options__item" href="#">Нет</a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
